--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,11 @@
 }
 
 .App-header {
+  padding-top: 60px;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -30,4 +29,10 @@
 .span {
   font-size: 16px;
   font-weight: 500;
+}
+.center {
+  margin: 0 auto;
+}
+.justify {
+  justify-content: center;
 }
