--- a/src/app.module.css
+++ b/src/app.module.css
@@ -7,11 +7,25 @@
 
 .piano-grid {
   display: grid;
+  width: 600px;
   color: #868e96;
   background-color: black;
   border-radius: 15px;
   padding: 12px;
   row-gap: 20px;
 }
-
-/* piano */
+.comment_input_section {
+  display: flex;
+  padding: 0 15px;
+  color: black;
+  font-weight: 700;
+  justify-content: flex-start;
+}
+.comment_input {
+}
+.btn {
+  display: block;
+  padding: 4px 8px;
+  background-color: #53565d;
+  border: 1px solid #53565d;
+}
